Limit histogram plots to 512, because 1024 seems to be causing problems.

--- a/image-analysis/listeners.html
+++ b/image-analysis/listeners.html
@@ -102,6 +102,10 @@ function doAction2(analysis) {
 	displayHoleHistogram(analysis, 1);
 	displayHoleHistogram(analysis, 2);
 	displayHoleHistogram(analysis, 3);
+	displayHoleHistogram(analysis, 4);
+	displayHoleHistogram(analysis, 5);
+	displayHoleHistogram(analysis, 6);
+	displayHoleHistogram(analysis, 7);
 	var element = document.querySelector("#analysis");
 	if (!element) {
 		return;
