Adjust width of table columns on frontpage.

--- a/scripts-local.html
+++ b/scripts-local.html
@@ -15,8 +15,8 @@ function displayList(list, query, peeps) {
 	output += "<tr>";
 	output += "<th></th>";
 	output += "<th title='Sort by manufacturer catalog number' onclick='SortByNumber(1, \"#red-welte-list\")'>Label</th>";
-	output += "<th title='Sort by title' onclick='SortByText(2, \"#red-welte-list\")'>Title</th>";
-	output += "<th title='Sort by composer' onclick='SortByText(3, \"#red-welte-list\")'>Composer</th>";
+	output += "<th style='width:300px;' title='Sort by title' onclick='SortByText(2, \"#red-welte-list\")'>Title</th>";
+	output += "<th style='width:200px;' title='Sort by composer' onclick='SortByText(3, \"#red-welte-list\")'>Composer</th>";
 	output += "<th title='Sort by performer' onclick='SortByText(4, \"#red-welte-list\")'>Performer</th>";
 	output += "<th title='Sort by DRUID' onclick='SortByDruid(6, \"#red-welte-list\")'colspan='7'>Data and Metadata Links</th>";  // PURL/Searchworks links, etc
 	output += "</tr>";
