Add roll statistics to header of feedback page.

--- a/feedback/listeners.html
+++ b/feedback/listeners.html
@@ -1,5 +1,8 @@
 {% include scripts/scripts-common.html %}
 
+{% include_relative scripts-local.html %}
+{% include_relative styles-local.html %}
+
 <script>
 // vim: ts=3
 
