--- a/feedback/listeners.html
+++ b/feedback/listeners.html
@@ -10,13 +10,13 @@ var CGI = {};      // CGI parameters from URL
 var ROLLINFO = [];
 var ATONINDEX = "https://raw.githubusercontent.com/pianoroll/SUPRA/master/index.aton";
 
-
 //////////////////////////////
 //
 // DOMContentLoaded event listener --
 //
 
 document.addEventListener("DOMContentLoaded", function () {
+console.log("GOT HERE XXX");
 	HighlightLinkInHeader();
 	CGI = GetCgiParameters();
 	if (sessionStorage.ROLLINFO) {
@@ -42,7 +42,7 @@ document.addEventListener("DOMContentLoaded", function () {
 //
 
 function doAction(rollInfo) {
-	DisplayStats(ROLLINFO);
+	DisplayStats(rollInfo);
 }
 
 
