--- a/bib/scripts-local.html
+++ b/bib/scripts-local.html
@@ -104,9 +104,17 @@ function prepareEntry(list, index) {
 	if (year) {
 		output += "; " + year;
 	}
-	// page range goes here
 	
-	output += ".";
+
+	if (entry.PAGE) {
+		if (entry.PAGE.match(/-/)) {
+			output += ", pp.&nbsp;" + entry.PAGE.replace(/-+/g, "&ndash;") + ".";
+		} else {
+			output += ", p.&nbsp;" + entry.PAGE + ".";
+		}
+	} else {
+		output += ".";
+	}
 
 	var newoutput = "";
 	newoutput += "<details>";
@@ -121,6 +129,118 @@ function prepareEntry(list, index) {
 	newoutput += "</details>";
 
 	return newoutput;
+}
+
+</script>
+
+
+<script>
+// vim: ts=3
+
+
+//////////////////////////////
+//
+// displayLinks --
+//
+
+function displayLinks(list, selector) {
+	if (!Array.isArray(list)) {
+		list = [ list ];
+	}
+/*
+	list.sort(function(a, b) {
+		if (!a) {
+			return -1;
+		}
+		if (!b) {
+			return -1;
+		}
+		if (Array.isArray(a)) {
+			a = a[0];
+		}
+		if (Array.isArray(b)) {
+			b = b[0];
+		}
+		var Aauthor = a.AUTHOR;
+		var Bauthor = b.AUTHOR;
+		if (!Aauthor) {
+			return +1;
+		}
+		if (!Bauthor) {
+			return -1;
+		}
+		return Aauthor.localeCompare(Bauthor);
+	});
+*/
+
+	var output = "";
+	for (var i=0; i<list.length; i++) {
+		output += prepareLinkEntry(list, i);
+	}
+
+	var element = document.querySelector(selector);
+	if (!element) {
+		console.log("COULD NOT FIND SELECTOR", selector);
+		return;
+	}
+	element.innerHTML = output;
+}
+
+
+
+//////////////////////////////
+//
+//  prepareLinkEntry --
+// 
+// @@BEGIN: LINK
+// @URL:		https://digital.deutsches-museum.de/projekte/notenrollen/rollentypen/welte_rot_t100/
+// @URL2:		https://digital.deutsches-museum.de/projekte/notenrollen/
+// @TITLE:		{Description of the Red/T100 Welte roll type} from the {Notenrollensammlung des Deutches Museum}
+// @ANNOTATION:	Contains a discussion about seven different paper colors that
+// 		are used to produce red welte rolls: three shades of pink, red, green, 
+//			off-white and white.
+// @TOPIC:		Roll Formats
+// @SUBTOPIC:	Red Welte roll
+// @@END: LINK
+//
+
+function prepareLinkEntry(list, index) {
+	var entry = list[index];
+	if (!entry) {
+		return "";
+	}
+	var output = "";
+	var title = entry.TITLE;
+	if (!title) {
+		return "";
+	}
+	title = title.replace(/}/g, "</a>");
+	title = title.replace(/{/g, "XplaceholderX");
+	if (entry.URL) {
+		title = title.replace(/XplaceholderX/, "<a target='_blank' href='" + entry.URL + "'>");
+	}
+	if (entry.URL2) {
+		title = title.replace(/XplaceholderX/, "<a target='_blank' href='" + entry.URL2 + "'>");
+	}
+	if (entry.URL3) {
+		title = title.replace(/XplaceholderX/, "<a target='_blank' href='" + entry.URL3 + "'>");
+	}
+	if (entry.URL4) {
+		title = title.replace(/XplaceholderX/, "<a target='_blank' href='" + entry.URL4 + "'>");
+	}
+	if (entry.URL5) {
+		title = title.replace(/XplaceholderX/, "<a target='_blank' href='" + entry.URL5 + "'>");
+	}
+	output += "<details>";
+	output += "<summary>";
+	output += title;
+	output += "</summary>";
+	if (entry.ANNOTATION) {
+		output += entry.ANNOTATION;
+	}
+	output += "</details>";
+
+	return output;
 }
 
 </script>
