--- a/scripts-local.html
+++ b/scripts-local.html
@@ -68,6 +68,16 @@ function doSearch(text) {
 	text = text.replace(/%([A-F0-9][A-F0-9])/g, "&#x$1;");
 	text = text.replace(/\&#x([0-7][0-9A-F]);/g, "%$1");
 	text = unescape(text);
+
+	var textlink = document.querySelector("#textlink");
+	if (textlink) {
+		if (text) {
+			textlink.style.visibility = "visible";
+		} else {
+			textlink.style.visibility = "hidden";
+		}
+	}
+
 	var fields = text.split(/\s+/);
 	var entries = ROLLINFO;
 	var oldentries;
@@ -132,6 +142,49 @@ function reportMatches(list) {
 	}
 	element.innerHTML = output;
 }
+
+
+
+//////////////////////////////
+//
+// copyTextSearchLink --
+//
+
+function copyTextSearchLink() {
+	var element = document.getElementById("search");
+	if (!element) {
+		return;
+	}
+	var text = element.value;
+	if (!text) {
+		return;
+	}
+
+	var baseurl = "https://supra.stanford.edu";
+	var url = baseurl;
+	url += "?";
+	url += "q=";
+	url += encodeURI(text);
+
+	copyToClipboard(url);
+}
+
+
+
+//////////////////////////////
+//
+// copyToClipboard --
+//
+
+function copyToClipboard(text) {
+   console.log("Copying", text);
+   element = document.createElement('textarea');
+   element.value = text;
+   document.body.appendChild(element);
+   element.select();
+   document.execCommand('copy');
+   document.body.removeChild(element);
+};
 
 
 </script>
